@@ -61,6 +61,14 @@ $list = $ps->db->fetch_rows(1,
 	"ORDER BY conftype"
 );
 
+// if $list is empty no results have been returned on a search
+if (!$list) {
+	$message = $cms->message('success', array(
+		'message_title' => $cms->trans("No Matching Configuration Options"),
+		'message'	=> $cms->trans("No results returned for search query")
+	));
+}
+
 $sections = array();	// sections order
 foreach ($list as $c) {
     $sections[ $c['conftype'] ] = $sections[ $c['conftype'] ] ?? null;
@@ -75,7 +83,7 @@ foreach ($list as $c) {
 // make sure we're trying to edit a valid conftype
 $sec_keys = array_keys($sections);
 if (!array_key_exists($ct, $sections)) {
-	$ct = $sec_keys[0];
+	$ct = $sec_keys[0] ?? null;
 	if (!$ct) $ct = 'main';
 }
 unset($sec_keys);
@@ -96,7 +104,7 @@ foreach ($list as $l) {
 // but we need to massage it into a slightly different format for easier use.
 $list = $ps->load_config_layout($ct, $where);
 $config_layout = array( 'general' => array() );	// we want general to be first
-if (is_array($sections[$ct])) {
+if (is_array($sections[$ct] ?? null)) {
 	foreach ($sections[$ct] as $sec) {
         $list[$ct][$sec] = $list[$ct][$sec] ?? null;
 		$config_layout[$sec] = $list[$ct][$sec];
@@ -113,8 +121,8 @@ unset($list);
 //print "<pre>"; print_r($config_layout); print "</pre>";
 // make sure the section is valid
 if (empty($s)) $s = 'general';
-if (!is_array($config_layout[$s])) {
-	$s = $sections[$ct][0];		// default to first section found
+if (!is_array($config_layout[$s] ?? null)) {
+	$s = $sections[$ct][0] ?? null;		// default to first section found
 }
 
 $cms->crumb("Config", psss_url_wrapper(array( '_base' => $php_scnm, 'ct' => $ct )));
@@ -134,25 +142,29 @@ foreach ($config_layout as $sec => $list) {
 }
 
 // we want the maintenance mode at the end of the main section
-foreach ($sections['main'] as $st => $val) {
-	if ($val != 'maintenance_mode') continue;
-	$mv = $val;
-	unset($sections['main'][$st]);
-	$sections['main'] = array_values($sections['main']);
-	array_push($sections['main'],$mv);
-	unset($mv);
-	break;
+if (isset($sections['main']) and is_array($sections['main'])) {
+	foreach ($sections['main'] as $st => $val) {
+		if ($val != 'maintenance_mode') continue;
+		$mv = $val;
+		unset($sections['main'][$st]);
+		$sections['main'] = array_values($sections['main']);
+		array_push($sections['main'],$mv);
+		unset($mv);
+		break;
+	}
 }
 
 // we want the credits at the end of the theme section
-foreach ($sections['theme'] as $st => $val) {
-	if ($val != 'credits') continue;
-	$mv = $val;
-	unset($sections['theme'][$st]);
-	$sections['theme'] = array_values($sections['theme']);
-	array_push($sections['theme'],$mv);
-	unset($mv);
-	break;
+if (isset($sections['theme']) and is_array($sections['theme'])) {
+	foreach ($sections['theme'] as $st => $val) {
+		if ($val != 'credits') continue;
+		$mv = $val;
+		unset($sections['theme'][$st]);
+		$sections['theme'] = array_values($sections['theme']);
+		array_push($sections['theme'],$mv);
+		unset($mv);
+		break;
+	}
 }
 //print "<pre>"; print_r($sections['theme']); print "</pre>";
 
@@ -245,20 +257,20 @@ if ($adv) {
 
 // assign variables to the theme
 $cms->theme->assign(array(
-	'conftypes'		=> array_keys($sections),
-	'ct'			=> $ct,
-	'sections'		=> $sections,
-	'section_labels'	=> $section_labels,
-	'section'		=> $sections[$ct],
-	's'			=> $s,
-	'conf'			=> $config_layout,
-	'errors'		=> $form->errors(),
-	'section_errors'	=> $section_errors['general'],
-	'form'			=> $form->values(),
-	'form_key'		=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
-	'advanced_config'	=> $cms->session->opt('advconfig') ? true : false,
-	'q'			=> $q,
-	'install_dir_insecure'			=> false
+	'conftypes'				=> array_keys($sections),
+	'ct'					=> $ct,
+	'sections'				=> $sections,
+	'section_labels'		=> $section_labels,
+	'section'				=> $sections[$ct] ?? null,
+	's'						=> $s,
+	'conf'					=> $config_layout,
+	'errors'				=> $form->errors(),
+	'section_errors'		=> $section_errors['general'],
+	'form'					=> $form->values(),
+	'form_key'				=> $ps->conf['main']['security']['csrf_protection'] ? $cms->session->key() : '',
+	'advanced_config'		=> $cms->session->opt('advconfig') ? true : false,
+	'q'						=> $q,
+	'install_dir_insecure'	=> false
 ));
 
 // display the output
